# AstroGraphAnomaly

./: .gitignore  ABOUT.md  CITATION.cff  CONTRIBUTING.md  GAIA_SMOKE_PATCH.md  GITHUB_WEB_WORKFLOW.md  PATCH_COLORBAR_FIX.md  PATCH_NOTES.md  README.md  README.txt  README_FIX.md  README_FULL_TEST.md  README_MAX_COMMANDS.md  README_PATCH_DUAL_OPTION.md  README_SHOWCASE.md  README_STARBOOST.md  colab_workflow_fixed.py  pyproject.toml  requirements.txt  requirements_viz.txt  run_workflow.py  sitecustomize.py
.github/: pull_request_template.md
configs/: default.yaml
data/: sample_gaia_like.csv  sample_hubble_like.csv
docs/: CANDIDATES_5P_WORKFLOWS_V3.md  CANDIDATES_5P_WORKFLOWS_V4.md  COLAB_ANALYSIS_TO_IMAGES_REPORT_2026.md  COLAB_IMAGE_REPORT_2026.md  COLAB_PLOTS_GALLERY.md  COLAB_TEST_MAXIMAL_2026.md  KNN_FALLBACK_PATCH.md  KNN_MULTI_FALLBACK_PATCH_V2.md  NOTEBOOKS.md  PLOTS_CONTRACT.md  README_HEADLINES_SECTION.md  REAL_DATA_WORKFLOWS.md  REGION_PACK_FAST.md  SHOWCASE_PLOTS.md  STARBOOST_PLAN.md  TOPICS.md  VIZ_A_TO_H.md  VIZ_NETWORK_OFFLINE_FIX_V3.md
notebooks/: colab_A_to_H_suite.ipynb  colab_analysis_to_images_report_2026.ipynb  colab_full_test.ipynb  colab_gaia_run.ipynb  colab_image_report_2026.ipynb  colab_inspect_outputs.ipynb  colab_max_runner.ipynb  colab_plots_gallery.ipynb  colab_region_pack_fast.ipynb  colab_run_full.ipynb  colab_showcase.ipynb  colab_showcase_plots.ipynb  colab_test_maximal_2026.ipynb  colab_workflow.ipynb
screenshots/: README.md
scripts/: export_screenshots.py  fix_viz_a_to_h_matplotlib_canvas.py
tests/: test_pipeline_csv.py  (+1 more)
(+61 files in other folders)
